<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>in.payu</groupId>
	<artifactId>Product</artifactId>
	<version>1.0</version>
	<properties>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>2.44.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-failsafe-plugin</artifactId>
			<version>2.12.4</version>
			<type>maven-plugin</type>
		</dependency>

		<dependency>
			<groupId>org.uncommons</groupId>
			<artifactId>reportng</artifactId>
			<version>1.1.4</version>
		</dependency>
		<dependency>
			<groupId>com.google.code</groupId>
			<artifactId>harlib</artifactId>
			<version>1.1.2</version>
		</dependency>
		<dependency>
			<groupId>com.google.code</groupId>
			<artifactId>harlib-jackson</artifactId>
			<version>1.1.2</version>
		</dependency>
		<dependency>
			<groupId>com.google.code</groupId>
			<artifactId>harlib-nodoc</artifactId>
			<version>1.1.2</version>
		</dependency>
		<dependency>
			<groupId>com.google.code</groupId>
			<artifactId>harlib-src</artifactId>
			<version>1.1.2</version>
		</dependency>
		<dependency>
			<groupId>com.google.code</groupId>
			<artifactId>selendroid-client</artifactId>
			<version>0.10.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.code</groupId>
			<artifactId>serialized-php-parser</artifactId>
			<version>16.0</version>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.8.5</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4</version>
			<type>jar</type>
		</dependency>


		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20140107</version>
		</dependency>
		<dependency>
			<groupId>br.eti.kinoshita</groupId>
			<artifactId>testlink-java-api</artifactId>
			<version>1.9.8-1</version>
		</dependency>

		<dependency>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis</artifactId>
			<version>1.3.04</version>
		</dependency>

		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.xmlrpc</groupId>
			<artifactId>xmlrpc-common</artifactId>
			<version>3.1.3</version>
		</dependency>
		<dependency>
			<groupId>io.selendroid</groupId>
			<artifactId>selendroid-standalone</artifactId>
			<version>0.12.0</version>
		</dependency>
		<dependency>
			<groupId>in.payu</groupId>
			<artifactId>Common</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.13</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.10-FINAL</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.9</version>
		</dependency>

		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.5.2</version>
		</dependency>
		<dependency>
			<groupId>com.opera</groupId>
			<artifactId>operadriver</artifactId>
			<version>1.5</version>
		</dependency>

		<dependency>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis</artifactId>
			<version>1.4.01</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.6</version>
		</dependency>

		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-deploy-plugin</artifactId>
			<version>2.7</version>
		</dependency>
		<dependency>
			<groupId>emma</groupId>
			<artifactId>emma</artifactId>
			<version>2.1.5320</version>
		</dependency>


		<dependency>
			<groupId>org.uncommons</groupId>
			<artifactId>reportng</artifactId>
			<version>1.1.2</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.testng</groupId>
					<artifactId>testng</artifactId>
				</exclusion>
			</exclusions>
		</dependency>


		<!-- This is extra dependecy for surefire report listener -->
		<dependency>
			<groupId>org.uncommons</groupId>
			<artifactId>reportng</artifactId>
			<version>1.1.2</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.testng</groupId>
					<artifactId>testng</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>3.0</version>
			<scope>test</scope>
		</dependency>
		<!-- dependecy for HTML parsing -->
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.7.2</version>
		</dependency>
		<!-- Dependency for Post man plugin -->
		<!-- <dependency> <groupId>ch.fortysix</groupId> <artifactId>maven-postman-plugin</artifactId> 
			<version>0.1.6</version> </dependency> -->
	</dependencies>
	<pluginRepositories>
		<pluginRepository>
			<id>testng-xslt-plugin</id>
			<url>http://www.cosminaru.ro/maven/</url>

		</pluginRepository>

		<pluginRepository>
			<id>reporty-ng</id>
			<url>https://github.com/cosminaru/reporty-ng/raw/master/dist/maven</url>
		</pluginRepository>

	</pluginRepositories>
	<build>
		<pluginManagement>

			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.5</version>
					<configuration>
						<forkCount>10</forkCount>
						<reuseForks>true</reuseForks>
						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						<parallel>methods</parallel>
						<threadCount>4</threadCount>
						<testFailureIgnore>true</testFailureIgnore>
						<properties>
							<property>
								<name>usedefaultlisteners</name>
								<value>false</value>
							</property>
							<property>
								<name>listener</name>
								<value>org.uncommons.reportng.HTMLReporter,org.uncommons.reportng.JUnitXMLReporter</value>
							</property>
							<property>
								<name>org.uncommons.reportng.escape-output</name>
								<value>false</value>
							</property>
						</properties>
						<!-- <excludedGroups>none</excludedGroups> -->
						<!-- <testErrorIgnore>true</testErrorIgnore> <testFailureIgnore>true</testFailureIgnore> -->
						<suiteXmlFiles>
							<suiteXmlFile>${basedir}\${suite.File}</suiteXmlFile>
						</suiteXmlFiles>
						<reportsDirectory>test-output\archive\${timestamp}</reportsDirectory>
						<systemProperties>
							<property>
								<name>Config.properties.Browser</name>
								<value>${browser.NAME}</value>
							</property>
							<!-- Surefire -Reporting Configuration uncomment when require -->


						</systemProperties>

					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.0</version>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
					</configuration>
				</plugin>
				<!-- Post Man plugin is placed here -->
				<plugin>
					<groupId>ch.fortysix</groupId>
					<artifactId>maven-postman-plugin</artifactId>
					<configuration>
						<skip>false</skip>
						<from>payu.testing@gmail.com</from>
						<subject>Maven+Jenkins Sample Run.
						</subject>
						<failonerror>true</failonerror>
						<mailAltConfig>true</mailAltConfig>
						<mailhost>smtp.gmail.com</mailhost>
						<mailuser>payu.testing@gmail.com</mailuser>
						<mailpassword>payu@123</mailpassword>
						<mailssl>true</mailssl>
						<mailport>465</mailport>
						<testReportsDirectory>test-output/archive/${timestamp}</testReportsDirectory>
						<htmlMessageFile>test-output/archive/${timestamp}/html/overview.html</htmlMessageFile>
						<sourceEncoding>UTF-8</sourceEncoding>
						<receivers>

							<receiver>shishir.dwivedi@payu.in</receiver>
							<receiver>sonia.gupta@payu.in</receiver>
							<receiver>shishir.dwivedi@payu.in</receiver>
							<receiver>nitin.mukhija@payu.in</receiver>
							<receiver>atul.jain@payu.in</receiver>
						</receivers>
						<!-- <fileSets> <fileSet> <directory>${basedir}/src/main</directory> 
							<includes> <include>**/*.pdf</include> </includes> </fileSet> </fileSets> -->
					</configuration>
					<executions>
						<execution>
							<id>send a mail</id>
							<phase>site</phase>
							<goals>
								<goal>send-mail</goal>
							</goals>
							<inherited>false</inherited>
						</execution>
					</executions>
				</plugin>

				<!-- Maven Exec Plugin to execute script -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>1.3.2</version>
					<executions>
						<execution>
							<goals>
								<goal>java</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<mainClass>utils.ParsingOverviewHTML</mainClass>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>
				        *.exe
				    </exclude>
				</excludes>
			</resource>
		</resources>

	</build>

	<reporting>
		<plugins>
			<plugin>
				<!-- TestNG-xslt related configuration. -->

				<groupId>org.reportyng</groupId>
				<artifactId>reporty-ng</artifactId>
				<version>1.2</version>

				<!-- <groupId>org.testng.xslt</groupId> <artifactId>testng-xslt-plugin</artifactId> 
					<version>1.1</version> -->
				<configuration>
					<outputDir>/target/testng-xslt-report</outputDir>
					<surefireReportDirectory>/test-output/archive/${timestamp}</surefireReportDirectory>
					<sortTestCaseLinks>true</sortTestCaseLinks>
					<testDetailsFilter>FAIL,SKIP,PASS,CONF,BY_CLASS</testDetailsFilter>
					<showRuntimeTotals>true</showRuntimeTotals>


					<!-- Output directory for the report -->
					<!-- <outputDir>${project.basedir}/target/testng-xslt-report</outputDir> 
						<sortTestCaseLinks>true</sortTestCaseLinks> <testDetailsFilter>FAIL,SKIP,PASS,CONF,BY_CLASS</testDetailsFilter> 
						<showRuntimeTotals>true</showRuntimeTotals> -->

				</configuration>
			</plugin>


			<!-- Normally, dependency report takes time, skip it -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.7</version>

				<configuration>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.18</version>
				
			</plugin>

			<!-- // integrate maven emma plugin to project site -->

		</plugins>



	</reporting>
	<repositories>
		<repository>
			<id>java-net</id>
			<url>http://download.java.net/maven/2</url>
		</repository>
	</repositories>
</project>